# WindowsD

./: .env.example  .gitignore  Cargo.toml  README.md  build.sh  config.example.toml  document.txt  main.ex.ts  main.ts  package.json  solana_arbitrage_bot.rar
constants/: constants.ts
src/: bot.rs  config.rs  error.rs  lib.rs  main.rs  monitoring.rs  pumpportal.rs  strategies.rs  trading.rs  wallet.rs
utils/: getDexFee.ts  sendtgalert.ts
